--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redis": "^0.12.1",
     "request": "^2.55.0",
     "serve-favicon": "^2.0.1",
+    "sprintf": "^0.1.5",
     "underscore": "^1.8.3",
     "winston": "^1.0.0"
   },
