Add History and Plan CRUD
- create,update History model
- update status of attendee's join a conference.

--- a/client/callPlannerApp/www/ionic.project
+++ b/client/callPlannerApp/www/ionic.project
@@ -1,4 +1,10 @@
 {
-  "name": "www",
-  "app_id": ""
+  "name": "proxy-example",
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "http://cors.api.com/api"
+    }
+  ]
 }
