--- a/client/callPlannerApp/www/ionic.project
+++ b/client/callPlannerApp/www/ionic.project
@@ -1,10 +1,4 @@
 {
-  "name": "proxy-example",
-  "app_id": "",
-  "proxies": [
-    {
-      "path": "/api",
-      "proxyUrl": "http://cors.api.com/api"
-    }
-  ]
+  "name": "www",
+  "app_id": ""
 }
